<resources>
    <string name="app_name">Bayad Connect</string>
    <string name="app_cipher">AES/CBC/PKCS5PADDING</string>
    <string name="app_aes">AES</string>
    <string name="user_agent">CBCI-PNB-App</string>
    <string name="app_com"> su</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">PNB Bayad Connect</string>
    <string name="title_activity_registration_form">Registration Form</string>
    <string name="title_activity_meralco">Meralco</string>
    <string name="title_activity_mecop">Meralco Kuryente Load</string>
    <string name="title_activity_bill_information_form">Bill Information</string>
    <string name="title_activity_bill_information_form_one">Bill</string>
    <string name="title_activity_maynilad">Maynilad Water Services Inc.</string>
    <string name="title_activity_globe">Globe</string>
    <string name="title_activity_manila_water_company">Manila Water Company</string>
    <string name="title_activity_pldt">PLDT</string>
    <string name="title_activity_smart">Smart / Sun Cellular</string>
    <string name="title_activity_sky_cable">Sky Cable</string>
    <string name="title_activity_multi_pay">NBI | PRC | DFA | Marina</string>
    <string name="title_activity_teleserv">NSO (Pilipinas Teleserv)</string>
    <string name="title_activity_validated_bill">Validated Bill</string>
    <string name="title_activity_posted_transactions">Posted Transactions</string>
    <string name="title_activity_transaction_details">Transaction Details</string>
    <string name="title_activity_visayan_electic_company">Visayan Electic Company</string>
    <string name="session_lastprn">lastprn</string>
    <string name="session_code">code</string>
    <string name="session_message">message</string>
    <string name="session_response">response</string>
    <string name="session_fname">fname</string>
    <string name="session_lname">lname</string>
    <string name="session_mobile">mobile</string>
    <string name="session_telephone">telephone</string>
    <string name="session_email">email</string>
    <string name="session_model">model</string>
    <string name="session_serial">serial</string>
    <string name="session_referral">referral</string>
    <string name="session_package">package</string>
    <string name="session_file">file</string>
    <string name="session_tpaid">tpaid</string>
    <string name="session_advisory">msg</string>
    <string name="session_agentmsg">agentmsg</string>
    <string name="session_password">password</string>
    <string name="session_version">version</string>
    <string name="session_true">true</string>
    <string name="session_wallet">wallet</string>
    <string name="session_prn_username">prn_username</string>
    <string name="session_shop_online">shop_online</string>
    <string name="session_id">id</string>
    <string name="session_bill_id">bill_id</string>
    <string name="session_balance_old">balance_old</string>
    <string name="session_service_code">service_code</string>
    <string name="session_biller_code">biller_code</string>
    <string name="session_accountno">accountno</string>
    <string name="session_amountdue">amountdue</string>
    <string name="session_passon">passon</string>
    <string name="session_amounttopay">amounttopay</string>
    <string name="session_longlat">longlat</string>
    <string name="session_otherinfo">otherinfo</string>
    <string name="session_billname">billname</string>
    <string name="session_balance">balance</string>
    <string name="session_tid">tid</string>
    <string name="session_cookies">cookies</string>
    <string name="session_account_no">account_no</string>
    <string name="session_date_validated">date_validated</string>
    <string name="session_partnerrefno">partnerrefno</string>
    <string name="session_cbci_code">cbci_code</string>
    <string name="session_cbci_message">cbci_message</string>
    <string name="session_cbci_transaction_no">cbci_transaction_no</string>
    <string name="session_cbci_otherinfo">cbci_otherinfo</string>
    <string name="session_cbci_receipt">cbci_receipt</string>
    <string name="session_cbci_date">cbci_date</string>
    <string name="session_balance_new">balance_new</string>
    <string name="session_details">details</string>
    <string name="session_servicecode">servicecode</string>
    <string name="session_billercode">billercode</string>
    <string name="label_next">Next</string>
    <string name="label_welcome">Welcome!</string>
    <string name="label_register">Register</string>
    <string name="label_forgot">Forgot Password</string>
    <string name="label_change">Change Password</string>
    <string name="label_login">Log In</string>
    <string name="label_logout">Log Out</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_submit">Submit</string>
    <string name="label_inquireprn">Inquire</string>
    <string name="label_category">Select Bill Category</string>
    <string name="label_billers">Select Billers</string>
    <string name="label_billspayment">Bills Payment</string>
    <string name="label_mobileloading">Mobile Loading</string>
    <string name="label_scan">Scan Meralco Reference Number</string>
    <string name="label_help">Help</string>
    <string name="label_zero">0.00</string>
    <string name="label_total">Total w/ Pass-on</string>
    <string name="label_wallet">Balance Php </string>
    <string name="label_otherinfo">Other Information</string>
    <string name="label_post">Post Transaction</string>
    <string name="label_totaltrans">Today\'s Bill</string>
    <string name="label_totalsale">Today\'s Sale</string>
    <string name="label_totaltranmonth">Month\'s Bill</string>
    <string name="label_totalsalemonth">Month\'s Sale</string>
    <string name="label_totalincomemonth">Total Income</string>
    <string name="label_transummary">Transaction Summary</string>
    <string name="label_date">Date</string>
    <string name="label_sale">Sale</string>
    <string name="label_trans"># of Trans</string>
    <string name="label_billname">Bill / Service Name</string>
    <string name="label_walletold">Old Balance</string>
    <string name="label_walletnew">New Balance</string>
    <string name="label_transactionno">Transaction Number</string>
    <string name="label_customersmobileno">Customer\'s Cellphone Number</string>
    <string name="label_bctel">(02) 672&#8211;5777 </string>
    <string name="label_bcemail">support@bayadcenter.com</string>
    <string name="label_capture">Capture Document</string>
    <string name="label_images">Please capture 1 of the following document.\n1. Government ID\n2. Barangay Clearance\n3. Company ID</string>
    <string name="label_package1">Package 1 (PHP 3,000.00)</string>
    <string name="label_package2">Package 2 (PHP 5,000.00)</string>
    <string name="label_package3">Package 3 (PHP 10,000.00)</string>
    <string name="label_packages">Choose Bayad Connect Package</string>
    <string name="label_resendsms">Send SMS Receipt</string>
    <string name="label_income">Income</string>
    <string name="label_questionmark">\i</string>
    <string name="label_favorite">Favorites</string>
    <string name="label_contact">Contact Bayad Center</string>
    <string name="field_beforedue">Before Due</string>
    <string name="field_customername">Customer Name</string>
    <string name="field_date">Date (mm/yyyy)</string>
    <string name="field_payfor">Pay For</string>
    <string name="field_billingperiod">Billing Period (mm/yyyy)</string>
    <string name="field_billingname">Billing Name</string>
    <string name="field_birthday">Birth Date (mm/dd/yyyy)</string>
    <string name="field_ssnumber">SS Number</string>
    <string name="field_billmonthleyc2">Bill Month (yyyyMM)</string>
    <string name="field_billmonth">Bill Month(mm/yyyy)</string>
    <string name="field_billnumber">Bill Number</string>
    <string name="field_consumerid">Consumer ID</string>
    <string name="field_disconnectiondate">Disconnection Date</string>
    <string name="field_affiliate">Affiliate Code</string>
    <string name="field_powercompanycode">Power Company Code</string>
    <string name="field_payorname">Payor Name</string>
    <string name="field_relocno">Reloc Number</string>
    <string name="field_agreementno">Agreement Number</string>
    <string name="field_name">Name</string>
    <string name="field_billmonthyear">Bill Month (mm/yyyy)</string>
    <string name="field_year">Year</string>
    <string name="field_deliverydate">Delivery Date (yyyy-mm-dd)</string>
    <string name="field_originalamount">Original Bill Amount</string>
    <string name="field_billno">Bill Number</string>
    <string name="field_bookid">Book ID</string>
    <string name="field_duedatebatelec2">Due Date (yyyy/mm/dd)</string>
    <string name="field_billmonthbatelec2">Bill Month (yyyy/mm)</string>
    <string name="field_invoiceno">Invoice No</string>
    <string name="field_soatype">Type of Statement of Account</string>
    <string name="field_newpassword">New Password</string>
    <string name="field_code">Change Password Code</string>
    <string name="field_bill_id">Validated ID</string>
    <string name="field_email">Email Address</string>
    <string name="field_firstname">First Name</string>
    <string name="field_middlename">Middle Name</string>
    <string name="field_lastname">Last Name</string>
    <string name="field_mobileno">Mobile No.</string>
    <string name="field_telephoneno">Telephone No.</string>
    <string name="field_address">Address</string>
    <string name="field_region">Region</string>
    <string name="field_tpaid">TPA ID</string>
    <string name="field_password">Password</string>
    <string name="field_search">Search Biller</string>
    <string name="field_service">Service</string>
    <string name="field_mrn">Meralco Reference Number</string>
    <string name="field_sin">Service ID Number</string>
    <string name="field_serialidno">Serial ID Number</string>
    <string name="field_win">WIN</string>
    <string name="field_accountno">Account Number</string>
    <string name="field_noofpolicy">No. of Policy (1-4)</string>
    <string name="field_amountdue">Amount Due</string>
    <string name="field_appmonth">Applicable Months (1-12)</string>
    <string name="field_passon">Pass-On Charge</string>
    <string name="field_accountname">Account Name</string>
    <string name="field_duedate">Due Date (mm/dd/yyyy)</string>
    <string name="field_phoneno">Phone Number</string>
    <string name="field_srn">Service Reference Number</string>
    <string name="field_productcode">Product Code</string>
    <string name="field_typecode">Type Code</string>
    <string name="field_billdate">Bill Date (mm/dd/yyyy)</string>
    <string name="field_contactno">Contact Number</string>
    <string name="field_otherinfo">Other Bill Information</string>
    <string name="field_billname">Bill Name</string>
    <string name="field_paymentrefno">Payment Reference Number</string>
    <string name="field_meternumber">Meter Number</string>
    <string name="field_message">Write your message here</string>
    <string name="field_referral">Referrer Name</string>
    <string name="field_mobile">Mobile Number</string>
    <string name="msg_registration">Fill out the form.</string>
    <string name="msg_registrationreply">This is the message of the registration process</string>
    <string name="msg_call">Call Bayad Center</string>
    <string name="msg_email">Email Address of Bayad Center Support Team</string>
    <string name="msg_messagebc">Message Bayad Center</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="message_terms">I agree on the Terms of Service and on the Data Privacy Policy</string>
    <string name="title_activity_sales_report">Sales Report</string>
    <string name="title_activity_contact_bayad_center">Contact Bayad Center</string>
</resources>