<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.cbci.cen.com.pnbbayadconnect.Welcome">
    <item
        android:id="@+id/action_dashboard"
        android:orderInCategory="100"
        android:title="@string/title_activity_dashboard"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_transactions"
        android:orderInCategory="100"
        android:title="@string/title_activity_posted_transactions"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_salesreport"
        android:orderInCategory="100"
        android:title="@string/title_activity_sales_report"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contactbayad"
        android:orderInCategory="100"
        android:title="@string/title_activity_contact_bayad_center"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/label_logout"
        app:showAsAction="never" />
</menu>
