<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.cbci.cen.com.pnbbayadconnect.ContactBayadCenter"
    tools:showIn="@layout/activity_contact_bayad_center"
    android:orientation="vertical"
    android:background="#f7f7f7"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_call"
        android:textSize="15sp"
        android:textColor="#fff"
        android:layout_margin="5dp"
        android:background="#053c7a"
        android:padding="3dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/label_bctel"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_email"
        android:textSize="15sp"
        android:textColor="#fff"
        android:layout_margin="5dp"
        android:background="#053c7a"
        android:padding="3dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/label_bcemail"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_messagebc"
        android:textSize="15sp"
        android:textColor="#fff"
        android:layout_margin="5dp"
        android:background="#053c7a"
        android:padding="3dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="#000"
        android:id="@+id/field_message"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="15sp"
        android:background="@drawable/field_border"
        android:padding="10dp"
        android:gravity="top"
        android:layout_weight="1"
        android:hint="@string/field_message" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_submit"
        android:id="@+id/button_submit"
        android:background="#053c7a"
        android:textColor="#fff"
        android:layout_margin="5dp" />
</LinearLayout>
