<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.cbci.com.bayadconnect.ChangePassword"
    tools:showIn="@layout/activity_change_password"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/bayadconnect"
        android:padding="10dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/lin_forgot">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/label_change"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="#053c7a"
            android:textStyle="bold" />




        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:inputType="number"
            android:id="@+id/field_code"
            android:layout_margin="5dp"
            android:textColor="#000"
            android:background="@drawable/field_border"
            android:hint="@string/field_code"
            android:maxLines="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/field_newpassword"
            android:layout_margin="5dp"
            android:textColor="#000"
            android:background="@drawable/field_border"
            android:hint="@string/field_newpassword"
            android:maxLines="1"
            android:inputType="textPassword" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/label_submit"
            android:id="@+id/tv_submit"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#fff"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:background="#053c7a"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/label_cancel"
            android:id="@+id/tv_cancel"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="#053c7a"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />


    </LinearLayout>

</LinearLayout>
